cmake_minimum_required(VERSION 3.5)
project(cppsharpener)

include_directories(include)

add_subdirectory(general_cpp/removeRepeatingNumbers)
add_subdirectory(general_cpp/isNumPowerOfTwo)
add_subdirectory(general_cpp/BinarySearch)
add_subdirectory(general_cpp/isCircularLinkedList)
add_subdirectory(general_cpp/reverseLinkedList)
add_subdirectory(general_cpp/removeDuplicateCharacters)
add_subdirectory(general_cpp/uniqueCharactersInSTring)
add_subdirectory(general_cpp/reverseCstyleString)
add_subdirectory(general_cpp/swapUsingBitwise)
add_subdirectory(general_cpp/evenOrOddUsingBitwise)
add_subdirectory(general_cpp/countZerosAndOnes)
add_subdirectory(general_cpp/implementVectorAndMatrixClass)
add_subdirectory(leetcode/203)
add_subdirectory(leetcode/206)
add_subdirectory(leetcode/876)
